Update deployment HTML and assets location

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="resources/public/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="assets/favicon.svg">
   </head>
   <body>
     <div id="app">
